<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".GameSettingActivity">

  <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="410dp"
    android:layout_height="80dp"
    android:layout_marginTop="64dp"
    android:layout_marginBottom="65dp"
    android:orientation="horizontal"
    android:textAlignment="center"
    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:id="@+id/textView"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:text="@string/settings"
      android:textAlignment="center"
      android:textSize="48sp"
      android:textStyle="bold" />
  </LinearLayout>


  <LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="320dp"
    android:layout_height="70dp"
    android:layout_marginTop="48dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    <TextView
      android:id="@+id/textView4"
      android:layout_width="4dp"
      android:layout_height="wrap_content"
      android:layout_weight="1.4"
      android:labelFor="@+id/gametimelimit"
      android:text="@string/time_limit"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textSize="24sp" />

    <EditText
      android:id="@+id/gametimelimit"
      android:layout_width="9dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ems="10"
      android:importantForAutofill="no"
      android:inputType="number"
      android:text="@string/number_three"
      android:textSize="24sp" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/linearLayout3"
    android:layout_width="320dp"
    android:layout_height="70dp"
    android:layout_marginTop="12dp"
    android:layout_weight="1.4"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

    <TextView
      android:id="@+id/textView2"
      android:layout_width="4dp"
      android:layout_height="wrap_content"
      android:layout_weight="1.4"
      android:labelFor="@+id/gameboardsize"
      android:text="@string/board_size"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textSize="24sp" />

    <EditText
      android:id="@+id/gameboardsize"
      android:layout_width="9dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ems="10"
      android:importantForAutofill="no"
      android:inputType="number"
      android:text="@string/number_four"
      android:textSize="24sp" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/linearLayout4"
    android:layout_width="320dp"
    android:layout_height="70dp"
    android:layout_marginTop="12dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

    <TextView
      android:id="@+id/textView3"
      android:layout_width="80dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:labelFor="@+id/gameletter"
      android:text="@string/letter_weight"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textSize="24sp" />

    <EditText
      android:id="@+id/gameletter"
      android:layout_width="9dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ems="10"
      android:importantForAutofill="no"
      android:inputType="textPersonName"
      android:labelFor="@+id/gameweight" />

    <EditText
      android:id="@+id/gameweight"
      android:layout_width="9dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ems="10"
      android:importantForAutofill="no"
      android:inputType="number"
      android:text="@string/number_one"
      android:textSize="24sp" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/linearLayout5"
    style="@style/Widget.AppCompat.ButtonBar"
    android:layout_width="320dp"
    android:layout_height="70dp"
    android:layout_marginTop="12dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

    <Button
      android:id="@+id/back"
      style="@style/Widget.AppCompat.ButtonBar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:onClick="onBack"
      android:text="@string/back" />

    <Button
      android:id="@+id/save"
      style="@style/Widget.AppCompat.ButtonBar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:onClick="onSave"
      android:text="@string/save" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
